# kwyre-ai

./: .commitmsg  .commitmsg.tmp  .env.example  .gitignore  Dockerfile  KWYRE_BUILD_PLAN.md  Kwyre_Domain_Adapters_Plan.md  LICENSE  MIGRATION_README.md  README.md  build.py  docker-compose.yml  lambda_train.sh  migrate_models.sh  nfl-playcaller-app.jsx  pyproject.toml  pyrightconfig.json  requirements-7b.txt  requirements-cpu.txt  requirements-freebsd.txt  requirements-inference.txt  requirements-macos.txt  requirements-windows.txt  requirements.txt  serve_local.py  start_training.sh  test_request.json  test_speed.py  tools.py
.cursor/: settings.json
benchmarks/: README.md  benchmark.py
chat/: README.md  chat.html  cloud.html  custom.html  dashboard.html  index.html  kwyre-demo.html  landing.html  login.html  main.html  pay.html  platform.html  products.html  race.html  security.html  technology.html
deploy/: README.md
docker/: README.md  entrypoint.sh
docker_build/: patch_fla_bitnet.py
docs/: COMPLIANCE_LETTER.md  DATA_RESIDENCY.md  DEPLOYMENT_CHECKLIST.md  ENTERPRISE_AUDIT.md  INCIDENT_RESPONSE.md  README.md  SECURITY_ARCHITECTURE.md  SOC2_DEPLOYMENT_GUIDE.md  VERIFICATION_GUIDE.md
finetune/: README.md  __init__.py  prepare_data.py  templates.py  train.py  validate_data.py
functions/: health.js
hf_7B_VLM/: run_VLM_hf.py
hf_7B_model/: __init__.py  activations.py  cache.py  configuration_gla_swa.py  gla_attention.py  gla_swa_gptq.py  modeling_gla_swa.py  norms.py  window_attention.py  window_attention_sdpa.py
installer/: README.md  install_freebsd.sh  (+4 more)
(+228 files in other folders)
